2000-07-21  Paul Keogh   <paul.keogh@anam.com>

	* gw/bb_udp.c: Added check for NULL ptr return from udpc_create() in
	function add_service() to prevent subsequent NULL dereference and
	crash.

2000-07-20  Richard Braakman  <dark@wapit.com>

	* gw/wtp.c: Fixed memory leak in wtp_unpack_wdp_datagram.
	Simplified the code a bit.

	* gw/wtp.c: Made wtp_unpack_wdp_datagram_real not crash when
	receiving an invalid PDU.

	* gw/wtp_pdu.c: In wtp_pdu_unpack, simply free a PDU with 
	unknown type instead of trying to destroy it.  None of its
	fields were set anyway.

2000-07-18  Richard Braakman  <dark@wapit.com>

	* gw/html.c: Fix skipping of quoted strings (bug #89, reported
	by Paul Keogh).

	* gw/smsbox.c: Avoid memory leak in http_request_thread().
	Fixes bug#101, reported by Paul Keogh.

2000-07-18  Kalle Marjola  <rpr@wapit.com>

	* gwlib/gwthread-pthread.c, gwlib/http.c: Fized bugs #98 and #100
	reported by Paul Keogh.

2000-07-18  Paul Keogh <paul.keogh@anam.com>

	* gw/urltrans.c: Fixed memory leak in destroy_onetrans().

2000-07-15 Derry Hamilton <rasilon@tardis.ed.ac.uk>

	* config.h.in,configure,configure.in: Removed checks for integer
	lengths as it broke more than it might have fixed.

2000-07-13  Kalle Marjola  <rpr@wapit.com>

	* */*: Making out release 0.10.2

2000-07-13  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c (wml_compile): Compiler now checks that the 
	output from libxml is not a NULL pointer.

2000-07-13  Derry Hamilton <rasilon@tardis.ed.ac.uk>
	* config.h.in,configure,configure.in: configure now checks for the 
	32-bit type and defines kint32 and kuint32 as appropriate in 
	preparation for 64-bit kannel on Alpha and UltraSPARC since the
	compiler types int32 and uint32 are not supported everywhere.
	* gwlib/http.h: Added the function definition for 
	http_charset_accepted rather than leaving it to be implicitly
	defined.
	
2000-07-13  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: removed two unused variables.
	