@@ -1,3 +1,8 @@
+2000-07-27  Richard Braakman  <dark@wapit.com>
+
+	* gw/smsc_cimd2.c: When pending_smsmessage receives an unexpected
+	response packet, report it instead of crashing.
+
 2000-07-21  Paul Keogh   <paul.keogh@anam.com>
 
 	* gw/bb_udp.c: Added check for NULL ptr return from udpc_create() in
